--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    color: black;
+}
+body{
+    padding-bottom: 500px;
+}
+.class{
+    border-bottom: 1px solid red;
+    padding: 2em;
+    margin-bottom: 10px;
+}
